--- a/lab03/task2/app/src/main/res/layout/activity_first.xml
+++ b/lab03/task2/app/src/main/res/layout/activity_first.xml
@@ -5,12 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/drawer_layout">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FirstActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/fragment1">
 
     <TextView
         android:id="@+id/activity"
@@ -24,7 +26,7 @@
         />
 
     <Button
-        android:id="@+id/toSecond"
+        android:id="@+id/bnToSecond"
         android:text="@string/to_second"
         android:layout_width="200dp"
         android:layout_height="75dp"
@@ -36,18 +38,18 @@
 
 </androidx.constraintlayout.widget.ConstraintLayout>
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start">
 
         <LinearLayout
+            android:id="@+id/drawer_nav_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/toAbout"
+                android:id="@+id/aboutActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/show_about"
