--- a/lab03/task5/app/src/main/res/layout/fragment_first.xml
+++ b/lab03/task5/app/src/main/res/layout/fragment_first.xml
@@ -5,12 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/drawer_layout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".FirstFragment">
+        tools:context=".FirstFragment"
+        android:id="@+id/fragment1">
 
         <TextView
             android:id="@+id/activity"
@@ -24,7 +26,7 @@
             />
 
         <Button
-            android:id="@+id/toSecond"
+            android:id="@+id/bnToSecond"
             android:text="@string/to_second"
             android:layout_width="200dp"
             android:layout_height="75dp"
@@ -47,7 +49,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/toAbout"
+                android:id="@+id/aboutActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/show_about"
