--- a/lab03/task5/app/src/main/res/layout/fragment_third.xml
+++ b/lab03/task5/app/src/main/res/layout/fragment_third.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/drawer_layout">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ThirdFragment">
+        tools:context=".ThirdFragment"
+        android:id="@+id/fragment3">
 
         <TextView
             android:id="@+id/activity"
@@ -22,7 +24,7 @@
             />
 
         <Button
-            android:id="@+id/toFirst"
+            android:id="@+id/bnToFirst"
             android:text="@string/to_first"
             android:layout_width="200dp"
             android:layout_height="75dp"
@@ -33,11 +35,11 @@
             />
 
         <Button
-            android:id="@+id/toSecond"
+            android:id="@+id/bnToSecond"
             android:text="@string/to_second"
             android:layout_width="200dp"
             android:layout_height="75dp"
-            app:layout_constraintTop_toBottomOf="@id/toFirst"
+            app:layout_constraintTop_toBottomOf="@id/bnToFirst"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="100dp"
@@ -56,7 +58,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/toAbout"
+                android:id="@+id/aboutActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/show_about"
